--- a/oc.yaml
+++ b/oc.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mi-deployment-22
+  name: mi-deployment-12
   namespace: k-att-y70-dev
   labels:
-    app: mi-app-2
+    app: mi-app-12
     areanegocio: tecnologia
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: mi-app-2
+      app: mi-app-12
   template:
     metadata:
       labels:
-        app: mi-app-2
+        app: mi-app-12
     spec:
       containers:
         - name: contenedor-principal
@@ -38,14 +38,14 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: mi-servicio-2
+  name: mi-servicio-12
   namespace: k-att-y70-dev
 spec:
   selector:
-    app: mi-app-2
+    app: mi-app-12
   ports:
     - protocol: TCP
-      port: 4001
+      port: 4000
       targetPort: 3000
   type: ClusterIP
 ---
@@ -64,7 +64,7 @@ metadata:
   namespace: k-att-y70-dev
 type: Opaque
 data:
-  PASSWORD: aG9sYTI=   # "hola2" en base64, ejemplo
+  PASSWORD: aG9sYQ==   # "hola2" en base64, ejemplo
 ---
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
@@ -75,7 +75,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: deployment
-    name: mi-deployment-22
+    name: mi-deployment-12
   minReplicas: 1
   maxReplicas: 5
   metrics:
@@ -89,7 +89,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mi-pvc-v3
+  name: mi-pvc-v12
   namespace: k-att-y70-dev
 spec:
   accessModes:
